spec/e2e/function/invalid_name.lit
fn "asdf" # error: [line 1] Error at "asdf": I was expecting a name or '{' after the 'fn' keyword.
